--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <th>Change (%)</th>
           <th>PE Ratio</th>
           <th>Trend</th>
+          <th>Why It's Performing Well</th>
         </tr>
       </thead>
       <tbody>
