--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
           </tbody>
         </table>
       </div>
-      <div class="weekly-picks">
-        <h2>Top Stocks Weekly</h2>
-        <ul id="weeklyStocks">
-          <!-- Weekly stocks will be dynamically added here -->
-        </ul>
+      <div class="side-tabs">
+        <div class="top-stocks-today">
+          <h2>Top Stocks Today</h2>
+          <ul id="dailyStocks">
+            <!-- Daily stocks will be dynamically added here -->
+          </ul>
+        </div>
+        <div class="top-stocks-weekly">
+          <h2>Top Stocks Weekly</h2>
+          <ul id="weeklyStocks">
+            <!-- Weekly stocks will be dynamically added here -->
+          </ul>
+        </div>
       </div>
     </div>
   </div>
