--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <div class="container">
     <h1>Best Stocks Predictor</h1>
     <div class="main-content">
+      <div class="side-tabs">
+        <div class="top-stocks-today">
+          <h2>Top Stocks Today</h2>
+          <ul id="dailyStocks">
+            <!-- Daily stocks will be dynamically added here -->
+          </ul>
+        </div>
+      </div>
+
       <div class="stock-table">
         <table id="stockTable">
           <thead>
@@ -28,13 +37,8 @@
           </tbody>
         </table>
       </div>
+
       <div class="side-tabs">
-        <div class="top-stocks-today">
-          <h2>Top Stocks Today</h2>
-          <ul id="dailyStocks">
-            <!-- Daily stocks will be dynamically added here -->
-          </ul>
-        </div>
         <div class="top-stocks-weekly">
           <h2>Top Stocks Weekly</h2>
           <ul id="weeklyStocks">
