--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <th>Stock</th>
               <th>Price</th>
               <th>Change (%)</th>
+              <th>EPS</th>
               <th>PE Ratio</th>
               <th>Trend</th>
               <th>Why It's Performing Well</th>
